5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1735_2523.log
== TEST (2019-05-12 11:18:36) 
-- CODE:
a=(1+(1/(2**0.5)))/2
b=(1*(1/(2**0.5)))**0.5
t=0.25-(1*(1-a)**2)
p=2*1
q=((1+(1/(2**0.5)))**2)/4*0.25
print(round(q,14))
	
-- OUTPUT:
0.18213834764832
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:18:58) 
-- CODE:
a=(1+(1/(2**0.5)))/2
b=(1*(1/(2**0.5)))**0.5
t=0.25-(1*(1-a)**2)
p=2*1
q=((a+b)**2)/4*0.25
print(round(q,14))
	
-- OUTPUT:
0.17944750903343
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:20:06) 
-- CODE:
a=(1+(1/(2**0.5)))/2
b=(1+(1/(2**0.5)))**0.5
t=0.25-(1*(1-a)**2)
p=2*1
q=((1+(1/(2**0.5)))**2)/4*0.25
print(round(q,14))

	
-- OUTPUT:
0.18213834764832
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:20:12) 
-- CODE:
a=(1+(1/(2**0.5)))/2
b=(1*(1/(2**0.5)))**0.5
t=0.25-(1*(1-a)**2)
p=2*1
q=((1+(1/(2**0.5)))**2)/4*0.25
print(round(q,14))

	
-- OUTPUT:
0.18213834764832
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:23:29) 
-- CODE:
a=(1+(1/(2**0.5)))/2
b=(1*(1/(2**0.5)))**0.5
t=0.25-(1*(1-a)**2)
p=2*1
q=((a+b)**2)/4*t
print(round(q,14))

	
-- OUTPUT:
0.16405334649243
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:28:36) 
-- CODE:
a=1
b=1/(2**0.5)
t=1/4
p=1
an=(a+b)/2
bn=(a*b)**0.5
tn=t-p*((a-an)**2)
p=2*p
q=((an+bn)**2)/4*tn
print(round(q,14))

	
-- OUTPUT:
0.16405334649243
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:28:46) 
-- CODE:
a=1
b=1/(2**0.5)
t=1/4
p=1
an=(a+b)/2
bn=(a*b)**0.5
tn=t-p*(a-an)**2
p=2*p
q=((an+bn)**2)/4*tn
print(round(q,14))

	
-- OUTPUT:
0.16405334649243
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:28:55) 
-- CODE:
a=1
b=1/(2**0.5)
t=1/4
p=1
an=(a+b)/2
bn=(a*b)**0.5
tn=t-p*(a-an)**2
p=2*p
q=((an+bn)**2)/4*tn
print(round(q,14))

	
-- OUTPUT:
0.16405334649243
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:29:20) 
-- CODE:
a=1
b=1/(2**0.5)
t=1/4
p=1
an=(a+b)/2
print(an)
bn=(a*b)**0.5
print(bn)
tn=t-p*(a-an)**2
print(tn)
p=2*p
q=((an+bn)**2)/4*tn
print(round(q,14))

	
-- OUTPUT:
0.8535533905932737
0.8408964152537145
0.22855339059327376
0.16405334649243
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:29:35) 
-- CODE:
a=1
b=1/(2**0.5)
t=1/4
p=1
an=(a+b)/2
print(an)
bn=(a*b)**0.5
print(bn)
tn=t-p*((a-an)**2)
print(tn)
p=2*p
q=((an+bn)**2)/4*tn
print(round(q,14))

	
-- OUTPUT:
0.8535533905932737
0.8408964152537145
0.22855339059327376
0.16405334649243
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:29:45) 
-- CODE:
a=1
b=1/(2**0.5)
t=1/4
p=1
an=(a+b)/2
print(an)
bn=(a*b)**0.5
print(bn)
tn=t-(p*((a-an)**2))
print(tn)
p=2*p
q=((an+bn)**2)/4*tn
print(round(q,14))

	
-- OUTPUT:
0.8535533905932737
0.8408964152537145
0.22855339059327376
0.16405334649243
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:33:24) 
-- CODE:
a=1
b=1/(2**0.5)
t=1/4
p=1
an=(a+b)/2
print(an)
bn=(a*b)**0.5
print(bn)
tn=t-(p*((a-an)**2))
print(tn)
p=2*p
q=((an+bn)**2)/1
print(round(q,14))

	
-- OUTPUT:
0.8535533905932737
0.8408964152537145
0.22855339059327376
2.8711601445349
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:33:46) 
-- CODE:
a=1
b=1/(2**0.5)
t=1/4
p=1
an=(a+b)/2
print(an)
bn=(a*b)**0.5
print(bn)
tn=t-(p*((a-an)**2))
print(tn)
p=2*p
q=((an+bn)**2)/(4*t)
print(round(q,14))

	
-- OUTPUT:
0.8535533905932737
0.8408964152537145
0.22855339059327376
2.8711601445349
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:34:46) 
-- CODE:
a=1
b=1/(2**0.5)
t=1/4
p=1
an=(a+b)/2
print(an)
bn=(a*b)**0.5
print(bn)
tn=t-(p*((a-an)**2))
print(tn)
p=2*p
q=((a+b)**2)/(4*t)
print(round(q,14))

	
-- OUTPUT:
0.8535533905932737
0.8408964152537145
0.22855339059327376
2.91421356237309
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:42:07) 
-- CODE:
x=int(input("Digite o numero de repeticoes: "))
j=0
a=1
b=1/(2**0.5)
t=1/4
p=1
while(x>j)
q=((a+b)**2)/(4*t)
print(round(q,14))


	
-- ERROR:
File "XXXX", line 7
    while(x>j)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:42:22) 
-- CODE:
x=int(input("Digite o numero de repeticoes: "))
j=0
a=1
b=1/(2**0.5)
t=1/4
p=1
while(x>j):
q=((a+b)**2)/(4*t)
print(round(q,14))
j=j+1

	
-- ERROR:
File "XXXX", line 8
    q=((a+b)**2)/(4*t)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:42:32) 
-- CODE:
x=int(input("Digite o numero de repeticoes: "))
j=0
a=1
b=1/(2**0.5)
t=1/4
p=1
q=0
while(x>j):
q=((a+b)**2)/(4*t)
print(round(q,14))
j=j+1

	
-- ERROR:
File "XXXX", line 9
    q=((a+b)**2)/(4*t)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:43:06) 
-- CODE:
x=int(input("Digite o numero de repeticoes: "))
j=0
a=1
b=1/(2**0.5)
t=1/4
p=1
q=0
while(x>j):
q = (a+b)**2/(4*t)
print(round(q,14))
j=j+1

	
-- ERROR:
File "XXXX", line 9
    q = (a+b)**2/(4*t)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:44:12) 
-- CODE:
x=int(input("Digite o numero de repeticoes: "))
j=0
a=1
b=1/(2**0.5)
t=1/4
p=1
q=0
while(x>j):
	q=((a+b)**2)(4*t)
	print(round(q,14))
	j=j+1
	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    q=((a+b)**2)(4*t)
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:44:28) 
-- CODE:
x=int(input("Digite o numero de repeticoes: "))
j=0
a=1
b=1/(2**0.5)
t=1/4
p=1
q=0
while(x>j):
	q=((a+b)**2)/(4*t)
	print(round(q,14))
	j=j+1
	


	
-- OUTPUT:
2.91421356237309
2.91421356237309
2.91421356237309
2.91421356237309
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:58:50) 
-- CODE:
x=int(input("Digite o numero de repeticoes: "))
j=0
a=1
b=1/(2**0.5)
t=1/4
p=1
q=0
x=0
while(x>j):
	q=((a+b)**2)/(4*t)
	print(round(q,14))
	x=a
	a=(a+b)/2
   b=((a*b)**0.5)
   t=t-(p*((x-a)**2)
	p=2*p
	j=j+1

	
	


	
-- ERROR:
File "XXXX", line 14
    b=((a*b)**0.5)
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:59:06) 
-- CODE:
x=int(input("Digite o numero de repeticoes: "))
j=0
a=1
b=1/(2**0.5)
t=1/4
p=1
q=0
x=0
while(x>j):
	q=((a+b)**2)/(4*t)
	print(round(q,14))
	x=a
	a=(a+b)/2


	
	


	
-- ERROR:
File "XXXX", line 14
    b=((a*b)**0.5)
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:59:28) 
-- CODE:
x=int(input("Digite o numero de repeticoes: "))
j=0
a=1
b=1/(2**0.5)
t=1/4
p=1
q=0
x=0
while(x>j):
	q=((a+b)**2)/(4*t)
	print(round(q,14))
	x=a
	a=(a+b)/2 
	b=((a*b)**0.5)


	
	


	
-- ERROR:
File "XXXX", line 14
    b=((a*b)**0.5)
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 12:00:30) 
-- CODE:
x=int(input("Digite o numero de repeticoes: "))
j=0
a=1
b=1/(2**0.5)
t=1/4
p=1
q=0
x=0
while(x>j):
	q=((a+b)**2)/(4*t)
	print(round(q,14))
	x=a
	a=(a+b)/2 
	b=((a*b)**0.5)
	t=t-((p*(x-a)**2))
	


	
	


	
-- ERROR:
File "XXXX", line 14
    b=((a*b)**0.5)
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 12:00:45) 
-- CODE:
x=int(input("Digite o numero de repeticoes: "))
j=0
a=1
b=1/(2**0.5)
t=1/4
p=1
q=0
x=0
while(x>j):
	q=((a+b)**2)/(4*t)
	print(round(q,14))
	x=a
	a=(a+b)/2 
	b=((a*b)**0.5)
	t=t-((p*(x-a)**2))
	p=2*p


	
	


	
-- ERROR:
File "XXXX", line 14
    b=((a*b)**0.5)
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 12:00:51) 
-- CODE:
x=int(input("Digite o numero de repeticoes: "))
j=0
a=1
b=1/(2**0.5)
t=1/4
p=1
q=0
x=0
while(x>j):
	q=((a+b)**2)/(4*t)
	print(round(q,14))
	x=a
	a=(a+b)/2 
	b=((a*b)**0.5)
	t=t-((p*(x-a)**2))
	p=2*p
	j=j+1


	
	


	
-- ERROR:
File "XXXX", line 14
    b=((a*b)**0.5)
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 12:01:07) 
-- CODE:
x=int(input("Digite o numero de repeticoes: "))
j=0
a=1
b=1/(2**0.5)
t=1/4
p=1
q=0
x=0
while(x>j):
	q=((a+b)**2)/(4*t)
	print(round(q,14))
	x=a
	a=(a+b)/2 
	b=((a*b)**0.5)
	t=t-((p*(x-a)**2))
	p=2*p
	j=j+1


	
	


	
-- ERROR:
File "XXXX", line 14
    b=((a*b)**0.5)
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 12:01:42) 
-- CODE:
x=int(input("Digite o numero de repeticoes: "))
j=0
a=1
b=1/(2**0.5)
t=1/4
p=1
x=0
while(x>j):
	q=((a+b)**2)/(4*t)
	print(round(q,14))
	x=a
	a=(a+b)/2 
	b=((a*b)**0.5)
	t=t-((p*(x-a)**2))
	p=2*p
	j=j+1


	
	


	
-- ERROR:
File "XXXX", line 14
    b=((a*b)**0.5)
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 12:01:56) 
-- CODE:
x=int(input("Digite o numero de repeticoes: "))
j=0
a=1
b=1/(2**0.5)
t=1/4
p=1
x=0
while(x>j):
	q=((a+b)**2)/(4*t)
	print(round(q,14))
	x=a
	a=(a+b)/2 
	b=((a*b)**0.5)
	t=t-((p*(x-a)**2))
	p=2*p
	j=j+1


	
	


	
-- ERROR:
File "XXXX", line 14
    b=((a*b)**0.5)
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 12:03:11) 
-- CODE:
x=int(input("Digite o numero de repeticoes: "))
j=0
a=1
b=1/(2**0.5)
t=1/4
p=1
x=0
while(x>j):
	q=((a+b)**2)/(4*t)
	print(round(q,14))
	x=a
	a=(a+b)/2 
	b=((a*b)**0.5)
	t=t-((p*(x-a)**2))
	p=2*p
	j=j+1


	
	


	
-- ERROR:
File "XXXX", line 14
    b=((a*b)**0.5)
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 12:03:20) 
-- CODE:
x=int(input("Digite o numero de repeticoes: "))
j=0
a=1
b=1/(2**0.5)
t=1/4
p=1
x=0
while(x>j):
	q=((a+b)**2)/(4*t)
	print(round(q,14))
	x=a
	a=(a+b)/2 
	b=((a*b)**0.5)
	t=t-((p*(x-a)**2))
	p=2*p
	j=j+1


	
	


	
-- ERROR:
File "XXXX", line 14
    b=((a*b)**0.5)
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 12:03:34) 
-- CODE:
x=int(input("Digite o numero de repeticoes: "))
j=0
a=1
b=1/(2**0.5)
t=1/4
p=1
x=0
while(x>j):
	q=((a+b)**2)/(4*t)
	print(round(q,14))
	

	
	


	
-- EXECUTION TIME:
0.180298
-- TEST CASE 1:
---- input:
4
---- correct output:
2.91421356237309
3.14057925052217
3.14159264621354
3.14159265358979
---- user output:

-- TEST CASE 2:
---- input:
3
---- correct output:
2.91421356237309
3.14057925052217
3.14159264621354
---- user output:

-- TEST CASE 3:
---- input:
2
---- correct output:
2.91421356237309
3.14057925052217
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 12:03:35) 
-- CODE:
x=int(input("Digite o numero de repeticoes: "))
j=0
a=1
b=1/(2**0.5)
t=1/4
p=1
x=0
while(x>j):
	q=((a+b)**2)/(4*t)
	print(round(q,14))
	

	
	


	
-- ERROR:
File "XXXX", line 14
    b=((a*b)**0.5)
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 12:03:46) 
-- CODE:
x=int(input("Digite o numero de repeticoes: "))
j=0
a=1
b=1/(2**0.5)
t=1/4
p=1
x=0

q=((a+b)**2)/(4*t)
print(round(q,14))
	

	
	


	
-- OUTPUT:
2.91421356237309
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 12:04:03) 
-- CODE:
x=int(input("Digite o numero de repeticoes: "))
j=0
a=1
b=1/(2**0.5)
t=1/4
p=1
x=0
while(x>j):
	print(x)
q=((a+b)**2)/(4*t)
print(round(q,14))
	

	
	


	
-- OUTPUT:
2.91421356237309
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 12:04:12) 
-- CODE:
x=int(input("Digite o numero de repeticoes: "))
j=0
a=1
b=1/(2**0.5)
t=1/4
p=1
x=0
while(x>j):
	print(x)
	j=j+1
q=((a+b)**2)/(4*t)
print(round(q,14))
	

	
	


	
-- OUTPUT:
2.91421356237309
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 12:04:26) 
-- CODE:
x=int(input("Digite o numero de repeticoes: "))
j=0
a=1
b=1/(2**0.5)
t=1/4
p=1
x=0
while(x>j):
	print(p)
	j=j+1
q=((a+b)**2)/(4*t)
print(round(q,14))
	

	
	


	
-- OUTPUT:
2.91421356237309
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 12:04:39) 
-- CODE:
x=int(input("Digite o numero de repeticoes: "))
j=0
a=1
b=1/(2**0.5)
t=1/4
p=1
x=0
while(x=j):
	print(p)
	j=j+1
q=((a+b)**2)/(4*t)
print(round(q,14))
	

	
	


	
-- ERROR:
File "XXXX", line 8
    while(x=j):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 12:04:47) 
-- CODE:
x=int(input("Digite o numero de repeticoes: "))
j=0
a=1
b=1/(2**0.5)
t=1/4
p=1
x=0
while(x==j):
	print(p)
	j=j+1
q=((a+b)**2)/(4*t)
print(round(q,14))
	

	
	


	
-- OUTPUT:
1
2.91421356237309
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 12:05:01) 
-- CODE:
x=int(input("Digite o numero de repeticoes: "))
j=0
a=1
b=1/(2**0.5)
t=1/4
p=1
x=0
while(x>j):
	print(p)
	j=j+1
q=((a+b)**2)/(4*t)
print(round(q,14))
	

	
	


	
-- OUTPUT:
2.91421356237309
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 12:05:12) 
-- CODE:
x=int(input("Digite o numero de repeticoes: "))
j=0
a=1
b=1/(2**0.5)
t=1/4
p=1
x=0
while(x<j):
	print(p)
	j=j+1
q=((a+b)**2)/(4*t)
print(round(q,14))
	

	
	


	
-- OUTPUT:
2.91421356237309
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 12:05:41) 
-- CODE:
x=int(input("Digite o numero de repeticoes: "))
j=0
a=1
b=1/(2**0.5)
t=1/4
p=1
k=0
while(x>j):
	q=((a+b)**2)/(4*t)
	print(round(q,14))
	x=a
	a=(a+b)/2 
	b=((a*b)**0.5)
	t=t-((p*(k-a)**2))
	p=2*p
	j=j+1


	
	


	
-- OUTPUT:
2.91421356237309
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 12:05:47) 
-- CODE:
x=int(input("Digite o numero de repeticoes: "))
j=0
a=1
b=1/(2**0.5)
t=1/4
p=1
k=0
while(x>j):
	q=((a+b)**2)/(4*t)
	print(round(q,14))
	x=a
	a=(a+b)/2 
	b=((a*b)**0.5)
	t=t-((p*(k-a)**2))
	p=2*p
	j=j+1


	
	


	
-- OUTPUT:
2.91421356237309
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 12:06:04) 
-- CODE:
x=int(input("Digite o numero de repeticoes: "))
j=0
a=1
b=1/(2**0.5)
t=1/4
p=1
k=0
while(x>j):
	q=((a+b)**2)/(4*t)
	print(round(q,14))
	k=a
	a=(a+b)/2 
	b=((a*b)**0.5)
	t=t-((p*(k-a)**2))
	p=2*p
	j=j+1


	
	


	
-- OUTPUT:
2.91421356237309
2.90778427967643
2.87598903800953
2.8634243401703
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 12:06:11) 
-- CODE:
x=int(input("Digite o numero de repeticoes: "))
j=0
a=1
b=1/(2**0.5)
t=1/4
p=1
k=0
while(x>j):
	q=((a+b)**2)/(4*t)
	print(round(q,14))
	k=a
	a=(a+b)/2 
	b=((a*b)**0.5)
	t=t-((p*(k-a)**2))
	p=2*p
	j=j+1


	
	


	
-- OUTPUT:
2.91421356237309
2.90778427967643
2.87598903800953
2.8634243401703
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 12:06:44) 
-- CODE:
x=int(input("Digite o numero de repeticoes: "))
j=0
a=1
b=1/(2**0.5)
t=1/4
p=1
k=0
while(x>j):
	q=((a+b)**2)/(4*t)
	print(round(q,14))
	k=a
	a=(a+b)/2 
	print(a)
	b=((a*b)**0.5)
	print(b)
	t=t-((p*(k-a)**2))
	print(t)
	p=2*p
	j=j+1


	
	


	
-- OUTPUT:
2.91421356237309
0.8535533905932737
0.7768869870150187
0.22855339059327376
2.90778427967643
0.8152201888041462
0.7958228171106102
0.22561452187446182
2.87598903800953
0.8055215029573781
0.8006574746586167
0.22523826384584464
2.8634243401703
0.8030894888079974
0.8018725597212382
0.22519094630326233
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 12:07:55) 
-- CODE:
x=int(input("Digite o numero de repeticoes: "))
j=0
a=1
b=1/(2**0.5)
t=1/4
p=1
k=0
while(x>j):
	q=((a+b)**2)/(4*t)
	print(round(q,14))
	k=a
	a=(a+b)/2 
	print(a)
	b=((k*b)**0.5)
	print(b)
	t=t-((p*(k-a)**2))
	print(t)
	p=2*p
	j=j+1


	
	


	
-- OUTPUT:
2.91421356237309
0.8535533905932737
0.8408964152537145
0.22855339059327376
3.14057925052217
0.8472249029234942
0.8472012667468914
0.22847329108090064
3.14159264621354
0.8472130848351929
0.8472130847527654
0.2284732905222318
3.14159265358979
0.8472130847939792
0.847213084793979
0.2284732905222318
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 12:08:33) 
-- CODE:
x=int(input("Digite o numero de repeticoes: "))
j=0
a=1
b=1/(2**0.5)
t=1/4
p=1
k=0
while(x>j):
	q=((a+b)**2)/(4*t)
	print(round(q,14))
	k=a
	a=(a+b)/2 
	b=((k*b)**0.5)
	t=t-((p*(k-a)**2))
	p=2*p
	j=j+1


	
	


	
-- EXECUTION TIME:
0.149456
-- TEST CASE 1:
---- input:
4
---- correct output:
2.91421356237309
3.14057925052217
3.14159264621354
3.14159265358979
---- user output:
2.91421356237309
3.14057925052217
3.14159264621354
3.14159265358979
-- TEST CASE 2:
---- input:
3
---- correct output:
2.91421356237309
3.14057925052217
3.14159264621354
---- user output:
2.91421356237309
3.14057925052217
3.14159264621354
-- TEST CASE 3:
---- input:
2
---- correct output:
2.91421356237309
3.14057925052217
---- user output:
2.91421356237309
3.14057925052217
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 12:09:22) 
-- CODE:
x=int(input("Digite o numero de repeticoes: "))
j=0
a=1
b=1/(2**0.5)
t=1/4
p=1
k=0
while(x>j):
	q=((a+b)**2)/(4*t)
	print(round(q,14))
	k=a
	a=(a+b)/2 
	b=((k*b)**0.5)
	t=t-((p*(k-a)**2))
	p=2*p
	j=j+1


	
	


	
-- EXECUTION TIME:
0.180629
-- TEST CASE 1:
---- input:
4
---- correct output:
2.91421356237309
3.14057925052217
3.14159264621354
3.14159265358979
---- user output:
2.91421356237309
3.14057925052217
3.14159264621354
3.14159265358979
-- TEST CASE 2:
---- input:
3
---- correct output:
2.91421356237309
3.14057925052217
3.14159264621354
---- user output:
2.91421356237309
3.14057925052217
3.14159264621354
-- TEST CASE 3:
---- input:
2
---- correct output:
2.91421356237309
3.14057925052217
---- user output:
2.91421356237309
3.14057925052217
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 12:09:29) 
-- CODE:
x=int(input("Digite o numero de repeticoes: "))
j=0
a=1
b=1/(2**0.5)
t=1/4
p=1
k=0
while(x>j):
	q=((a+b)**2)/(4*t)
	print(round(q,14))
	k=a
	a=(a+b)/2 
	b=((k*b)**0.5)
	t=t-((p*(k-a)**2))
	p=2*p
	j=j+1


	
	


	
-- EXECUTION TIME:
0.141723
-- TEST CASE 1:
---- input:
4
---- correct output:
2.91421356237309
3.14057925052217
3.14159264621354
3.14159265358979
---- user output:
2.91421356237309
3.14057925052217
3.14159264621354
3.14159265358979
-- TEST CASE 2:
---- input:
3
---- correct output:
2.91421356237309
3.14057925052217
3.14159264621354
---- user output:
2.91421356237309
3.14057925052217
3.14159264621354
-- TEST CASE 3:
---- input:
2
---- correct output:
2.91421356237309
3.14057925052217
---- user output:
2.91421356237309
3.14057925052217
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 12:10:04) 
-- CODE:
x=int(input("Digite o numero de repeticoes: "))
j=0
a=1
b=1/(2**0.5)
t=1/4
p=1
k=0
while(x>j):
	q=((a+b)**2)/(4*t)
	print(round(q,14))
	k=a
	a=(a+b)/2 
	b=((k*b)**0.5)
	t=t-((p*(k-a)**2))
	p=2*p
	j=j+1


	
	


	
-- OUTPUT:
2.91421356237309
3.14057925052217
3.14159264621354
3.14159265358979
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 12:10:10) 
-- CODE:
x=int(input("Digite o numero de repeticoes: "))
j=0
a=1
b=1/(2**0.5)
t=1/4
p=1
k=0
while(x>j):
	q=((a+b)**2)/(4*t)
	print(round(q,14))
	k=a
	a=(a+b)/2 
	b=((k*b)**0.5)
	t=t-((p*(k-a)**2))
	p=2*p
	j=j+1


	
	


	
-- EXECUTION TIME:
0.277236
-- TEST CASE 1:
---- input:
4
---- correct output:
2.91421356237309
3.14057925052217
3.14159264621354
3.14159265358979
---- user output:
2.91421356237309
3.14057925052217
3.14159264621354
3.14159265358979
-- TEST CASE 2:
---- input:
3
---- correct output:
2.91421356237309
3.14057925052217
3.14159264621354
---- user output:
2.91421356237309
3.14057925052217
3.14159264621354
-- TEST CASE 3:
---- input:
2
---- correct output:
2.91421356237309
3.14057925052217
---- user output:
2.91421356237309
3.14057925052217
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
